package com.huerta.fleetmanagementsystem.gui;

public class MainWindow {

}
