package com.huerta.fleetmanagementsystem.model.person;

import lombok.Getter;

/**
 * Represents a driver that can be assigned to a vehicle.
 *
 * <p><b>OOP concept – Encapsulation:</b> all fields are {@code private}
 * and mutated exclusively through setters that validate every input,
 * ensuring the object is always in a consistent state. Getters are
 * generated by Lombok ({@code @Getter}).</p>
 *
 * <p><b>OOP concept – Aggregation:</b> a {@code Driver} is referenced
 * by {@link com.huerta.fleetmanagementsystem.model.vehicle.Vehicle} and
 * by {@link com.huerta.fleetmanagementsystem.model.fleet.Fleet}, but it
 * can exist independently of both (weak "has-a" relationship).</p>
 */
@Getter
public class Driver {

  /** The driver’s full name. */
  private String fullName; // nombre completo

  /** Unique driving-licence identifier. */
  private String licenseNumber; // número de licencia

  /** Number of years of professional driving experience (≥ 0). */
  private int yearsOfExperience; // años de experiencia

  /**
   * Creates a new driver.
   *
   * @param fullName          the driver’s full name; must not be blank
   * @param licenseNumber     the licence identifier; must not be blank
   * @param yearsOfExperience years of experience; must be ≥ 0
   * @throws IllegalArgumentException if any argument violates its constraint
   */
  public Driver(String fullName, String licenseNumber, int yearsOfExperience) {
    setFullName(fullName);
    setLicenseNumber(licenseNumber);
    setYearsOfExperience(yearsOfExperience);
  }

  /**
   * Sets the driver’s full name.
   *
   * @param fullName non-{@code null}, non-blank name
   * @throws IllegalArgumentException if {@code fullName} is null or blank
   */
    public void setFullName(String fullName) {
    if (fullName == null || fullName.isBlank()) {
      throw new IllegalArgumentException("Full name cannot be null or empty.");
    }
    this.fullName = fullName;
  }

  /**
   * Sets the licence number.
   *
   * @param licenseNumber non-{@code null}, non-blank identifier
   * @throws IllegalArgumentException if {@code licenseNumber} is null or blank
   */
  public void setLicenseNumber(String licenseNumber) {
    if (licenseNumber == null || licenseNumber.isBlank()) {
      throw new IllegalArgumentException("License number cannot be null or empty.");
    }
    this.licenseNumber = licenseNumber;
  }

  /**
   * Sets the years of experience.
   *
   * @param yearsOfExperience must be ≥ 0
   * @throws IllegalArgumentException if negative
   */
  public void setYearsOfExperience(int yearsOfExperience) {
    if (yearsOfExperience < 0) {
      throw new IllegalArgumentException("Years of experience cannot be negative.");
    }
    this.yearsOfExperience = yearsOfExperience;
  }

  /**
   * Returns a human-readable summary: name, licence and experience.
   *
   * @return formatted string
   */
  @Override
  public String toString() {
    return String.format("%s (Lic: %s, %d yrs)", fullName, licenseNumber, yearsOfExperience);
  }
}
