package com.huerta.fleetmanagementsystem.service;

public class FleetService {

}
